# Win32_OpenGL

./: CMakeLists.txt  CMakeSettings.json  glad.c  main.cpp
